--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "gatsby": "^2.0.19",
     "gatsby-image": "^2.0.17",
+    "gatsby-plugin-google-analytics": "^2.0.6",
     "gatsby-plugin-manifest": "^2.0.5",
     "gatsby-plugin-netlify-cms": "^3.0.4",
     "gatsby-plugin-offline": "^2.0.5",
